# hgvs_parser

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml
examples/: example1.py
pyhgvs/: __init__.py  models.py  variants.py
pyhgvs/tests/: genome.py  test_hgvs_names.py
pyhgvs2/: __init__.py  exceptions.py  functions.py  hgvsg_name.py  lookups.py  models.py  regex.py  utils.py
pyhgvs2/tests/: genome.py  test_hgvs_names.py  test_variants.py
