[project]
name = "pyhgvs2"
version = "1.0.0"
description = "Fork of pyhgvs"
readme = "README.md"
requires-python = ">=3.5"
dependencies = []

[dependency-groups]
dev = [
    "pyfaidx",
    "pytest-mock",
    "ruff",
    "mypy"
]

[tool.mypy]
check_untyped_defs = true
follow_untyped_imports = true
exclude = [
    "pyhgvs/tests"
]

[tool.ruff]
extend-include = ["bin/"]

[tool.pytest.ini_options]
filterwarnings = ["error"]